--- a/androidApp/GophertainmentAndroid/app/src/main/res/values/strings.xml
+++ b/androidApp/GophertainmentAndroid/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GophertainmentAndroid</string>
+    <string name="search_hint">Search movies, actors, directors...</string>
 </resources>
